--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.Eventure"
         tools:targetApi="31">
         <activity
+            android:name=".view.my_post.MyPostActivity"
+            android:exported="false" />
+        <activity
             android:name=".view.dashboard.DashboardActivity"
             android:exported="false"
             android:label="@string/title_activity_dashboard" />
