--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Eventure"
         tools:targetApi="31">
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="YOUR_API_KEY" />
+
+        <activity
+            android:name=".view.detail.DetailActivity"
+            android:exported="false" />
         <activity
             android:name=".view.my_post.MyPostActivity"
             android:exported="false" />
