--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,24 @@
         android:theme="@style/Theme.Eventure"
         tools:targetApi="31">
         <activity
+            android:name=".view.verification.VerificationActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.create_post.CreatePostActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.change_password.ChangePasswordActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.edit_profile.EditProfileActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.choose_interest.ChooseEvent"
+            android:exported="false" />
+        <activity
+            android:name=".view.choose_interest.ChooseCategoryActivity"
+            android:exported="false" />
+        <activity
             android:name=".view.login.LoginActivity"
             android:exported="false" />
         <activity
