--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,10 +42,10 @@
             android:name=".view.edit_profile.EditProfileActivity"
             android:exported="false" />
         <activity
-            android:name=".view.choose_interest.ChooseEvent"
+            android:name=".view.choose_interest.choose_event.ChooseEventActivity"
             android:exported="false" />
         <activity
-            android:name=".view.choose_interest.ChooseCategoryActivity"
+            android:name=".view.choose_interest.choose_category.ChooseCategoryActivity"
             android:exported="false" />
         <activity
             android:name=".view.login.LoginActivity"
