--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="YOUR_API_KEY" />
+            android:value="AIzaSyCfXZBYrktwNn3BRWQvCjmOAxwoadMIJAA" />
 
         <activity
             android:name=".view.search.SearchActivity"
@@ -31,6 +31,7 @@
             android:exported="false" />
         <activity
             android:name=".view.my_post.MyPostActivity"
+            android:label="@string/my_post"
             android:exported="false" />
         <activity
             android:name=".view.create_post.CreatePostActivity"
